--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>Portfolio - Anna Dahlberg</title>
-    <link rel="icon" href="img/icon brusch.jpg" type="image/x-icon">
+    <link rel="icon" href="img/icon_brusch.jpg" type="image/x-icon">
 
 </head>
 
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-</body>
+
       <footer class="footer">
 
         <table class="footertable">
