--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>Portfolio - Anna Dahlberg</title>
-    <link rel="icon" href="img/brush for icon - kopia.jpg" type="image/x-icon">
+    <link rel="icon" href="img/icon_brusch.jpg" type="image/x-icon">
 
 </head>
 
@@ -32,24 +32,24 @@
         <form>
             <div class="textfield">
                 <label for="name">Name</label>
-                <input type="text" placeholder="Your name" required>
+                <input type="text" placeholder="Your name" id="name" required>
             </div>
 
             <div class="mailfield">
                 <label for="email">E-mail</label>
-                <input type="email" placeholder="Your e-mail" required>
+                <input type="email" placeholder="Your e-mail" id="email" required>
             </div>
 
             <div class="field">
                 <label for="message">Message</label>
-                <textarea name="message" rows="10" cols="50" placeholder="Write your message here" required></textarea>
+                <textarea name="message" rows="10" cols="50" placeholder="Write your message here" id="message" required></textarea>
             </div>
 
             <button type="submit" class="button1">Send</button>
         </form>
     </div>
 
-    </body>
+  
     <footer class="footer">
 
         <table class="footertable">
@@ -78,3 +78,5 @@
             <a href="/index.html"><img src="img/logotyp.png" alt="Logotyp Anna Dahlberg" id="Logotypefooter"></a>
             <p id="textfooter"> &copy; 2024 Anna Dahlberg. All rights reserved.</p>
     </footer>
+  </body>
+  </html>
