--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>Portfolio - Anna Dahlberg</title>
-    <link rel="icon" href="img/icon brusch.jpg" type="image/x-icon">
-
+    <link rel="icon" href="img/icon_brusch.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -26,28 +25,6 @@
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
-
-       <!-- 
-        <nav class="navigation">
-            
-            <div class="logo">
-                <a href="index.html">
-                    <img src="img/logotyp.png" alt="Logotype for Anna Dahlberg" ></a>
-            </div>
-
-            <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-
-            <ul class="navLinks">
-                <li><a href="aboutme.html">About me</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    -->
     </header>
 
     <div>
@@ -62,12 +39,13 @@
         <div class="project1">
             <div>
                 <div><h2 class="h2project">Aquatic - the water messureing app for pets water intake</h2>
-                    <img src="/img/project1.png" alt="Three screenshots from the Aquatic app showing statistics and information about the pets of the user." class="bilderprojekt"></div>
+                    <img src="/img/project1.png" alt="Three screenshots from the Aquatic app showing statistics and information about the pets of the user." class="bilderprojekt">
+                </div>
                 <div>
-                    <button class="button1" a href="myprojects.html">See work procedure</a>
-                    </div>
+                    <button class="button1">See work procedure</button>
                 </div>
             </div>
+        </div>
     </div>
 
     <div class="projectBlock">
@@ -75,18 +53,19 @@
             <div>
                 <div>
                     <h2 class="h2project">Cerefina choklad - prototype of webshop made in Figma</h2>
-                    <img src="/img/project2.png" alt="Three screenshots from the webbsite of Cerefina choklad showing different sites from the webshop." class="bilderprojekt"></td>
+                    <img src="/img/project2.png" alt="Three screenshots from the webbsite of Cerefina choklad showing different sites from the webshop." class="bilderprojekt">
                 <div>
                     
-                    <button class="button1" a href="myprojects.html">See work procedure</button></a>
+                    <button class="button1">See work procedure</button>
                 </div>
             </div>
         </div>
     </div>
     </div>
 
-</body>
-<footer class="footer">
+
+
+<footer>
 
     <table class="footertable">
         <tr>
@@ -117,7 +96,7 @@
    
 </footer>
 
-
+</body>
 
 
 </html>
