--- a/aboutme.html
+++ b/aboutme.html
@@ -27,10 +27,11 @@
 
    
     <h1 id="intro">About me</h1>
-    <p  id="introtext">Information about my education and earlier experiences.</p>
+    <h2  id="introtext">Information about my education and earlier experiences.</h2>
+
+    
 
     <div class="block">
-
       <p>Hello!</p>
       <p>My name is Anna Dahlberg and I plan to graduate as UX-designer at Linneuniversitetet in spring 2025.</p>
       <p>I have been working as a chef for several years but I have always had a little thougt of doing something else, and when my childern became teenagers I decided to change direction of my carrier into IT. The chioce of UX was pretty easy. I noticed when something are distubing the flow on webpages or mobile apps and I thougt of how it could be better and came up with other ways to make it more user friendly, not only for me but for people in my surroundings. Designing have been an interest since my childhood and I have always considered myself as a creative person. Baking, drawing, scrapbooking and sewing are a few of my interests that I have had in periods. Right now, painting with aquarelle is the main interest when I got the time. </p>
@@ -41,7 +42,7 @@
       <img src="img/anna.png" alt="A picture of Anna" id="imganna">
 
     </div>
-
+  <div id="animation"></div>
     <div class="timeline">
         <div class="container left">
           <div class="content">
