--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <tr>
                 <td class="cell">
                     <p>Send me a message</p>
-                    <p>Link to form</p>
+                    <p><a href="contact.html">Link to form</a></p>
                 </td>
                 <td class="cell">
                     <p>Integrity policy</p>
