--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="projectBlock">
         <div class="project1">
             <div>
-                <div><h2 class="h2project">Aquatic - the water messureing app for pets water intake med in Figma</h2>
+                <div><h2 class="h2project">Aquatic - the water messureing app for pets water intake made in Figma</h2>
                     <img src="/img/project1.png" alt="Three screenshots from the Aquatic app showing statistics and information about the pets of the user." class="bilderprojekt">
                 </div>
                 <div>
@@ -93,7 +93,7 @@
         <tr>
             <td class="cell">
                 <p>Send me a message</p>
-                <p>Link to form</p>
+                <p><a href="contact.html">Link to form</a></p>
             </td>
             <td class="cell">
                 <p>Integrity policy</p>
